# UAV-coverage-sim

./: .gitignore  .gitmodules  README.md  run_mission.sh  run_multi_mission.sh  start.sh  start_multi.sh
ros2_ws/src/battery_model/: package.xml  setup.cfg  setup.py
ros2_ws/src/battery_model/battery_model/: battery_node.py
ros2_ws/src/coverage_mapper/: package.xml  setup.cfg  setup.py
ros2_ws/src/coverage_mapper/coverage_mapper/: coverage_core.py  coverage_node.py
sim/models/: README.txt
sim/models/quad7/: model.config  model.sdf
sim/models/x500_base_7/: model.config  model.sdf
sim/worlds/: multi_quad7.sdf
tools/: ground_vehicle_runner.py  gz_pose_to_ros_pose.py  line_follow_runner.py  mavproxy_run.sh  plot_coverage.py  plot_coverage_score.py  throttle_bridge.py  waypoint_runner.py
