<?xml version="1.0"?>
<package format="3">
  <name>battery_model</name>
  <version>0.0.0</version>
  <description>Simple battery model</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
